plugins {
    id 'java'
    id 'com.gradle.plugin-publish' version '2.1.1'
}

group = 'io.github.greymagic27'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain { languageVersion.set(JavaLanguageVersion.of(25)) }
}

dependencies {
    implementation 'org.jetbrains:annotations:26.1.0'
    testImplementation platform('org.junit:junit-bom:6.1.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}
tasks.withType(JavaExec).configureEach {
    jvmArgs '--enable-native-access=ALL-UNNAMED'
}